<resources>
    <string name="app_name">WeiXin</string>
    <string name="weixin_loading">启动页面</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="phone_register">手机号注册</string>
    <string name="textview">TextView</string>
    <string name="username">昵称</string>
    <string name="username_hint">例如：陈晨</string>
    <string name="country_region">国家/地区</string>
    <string name="chinese_mainland">中国大陆(+86)</string>
    <string name="phone_number">手机号</string>
    <string name="phone_number_hint">请填写手机号</string>
    <string name="password">密码</string>
    <string name="password_hint">填写密码</string>
    <string name="register_file">已阅读并同意</string>
    <string name="weixin_app_permissionwithagreement">微信软件许可及服务协议</string>
    <string name="phone_login">手机号登录</string>
    <string name="other_login">用微信号/QQ号/邮箱登录</string>
    <string name="phone_login_next">登录</string>
    <string name="other_login_page">微信号/QQ号/邮箱登录</string>
    <string name="other_login_username">账号</string>
    <string name="other_login_username_hint">请填写微信号/QQ号/邮箱</string>
    <string name="other_login_password">密码</string>
    <string name="othter_login_password_hint">请填写密码</string>
    <string name="other_change_login">用手机号登录</string>
    <string name="WeiXin_safety_center">找回密码 | 紧急冻结  |  微信安全中心</string>
    <string name="weixin">微信</string>
    <string name="search">搜索</string>
    <string name="address_book">通讯录</string>
    <string name="discover">发现</string>
    <string name="own">我</string>
    <string name="me_username">Canoe</string>
    <string name="weixin_number">微信号：KALLQ95398...</string>
    <string name="state">状态</string>
    <string name="payment">支付</string>
    <string name="chouchang">收藏</string>
    <string name="pengyouquan">朋友圈</string>
    <string name="kabao">卡包</string>
    <string name="biaoqing">表情</string>
    <string name="setting">设置</string>
    <string name="username_safety">账号与安全</string>
    <string name="teenager">青少年模式</string>
    <string name="new_message">新消息通知</string>
    <string name="privacy">隐私</string>
    <string name="general">通用</string>
    <string name="helpwithfeedback">帮助与反馈</string>
    <string name="about_weixin">关于微信</string>
    <string name="plug_in">插件</string>
    <string name="switchover_username">切换账号</string>
    <string name="exit">退出登录</string>
    <string name="detail_name">DayDayUp</string>
    <string name="chat_time">下午9:29</string>
    <string name="chat_name_first">王儿子</string>
    <string name="chat_message_first">436水费交了没得</string>
    <string name="chat_username_second">孙杰</string>
    <string name="chat_username_3">淮亚冲</string>
    <string name="chat_message_3">436永远的神</string>
    <string name="chat_username_4">曹义华</string>
    <string name="chat_message_4">428曹三狗</string>
    <string name="chat_username_5">胡庆涛</string>
    <string name="chat_message_5">428渣渣</string>
    <string name="chat_username_6">宋仕骥</string>
    <string name="chat_message_6">来了，老弟</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>